@@ -1,5 +1,9 @@
 h1. CHANGELOG
 
+h2. 2.4.34 unreleased
+
+* update 'rails-foundation' example application for Rails 4.1
+
 h2. 2.4.33 February 27, 2014
 
 * add 'rails-devise-pundit' example application to 'apps4' recipe
